recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:19: error: ')' expected but ';' found.
  while(i<=3;i++){
            ^FourSquare:19: error: ';' expected but ')' found.
  while(i<=3;i++){
                ^